# ToolBuilder

./: .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/core/: config.py  deps.py  exceptions.py  logging.py
backend/db/: engine.py  models.py
backend/eval/: __main__.py  models.py  report.py  run_manager.py  runner.py  versioning.py
backend/evaluation/: eval_agent.py  llm_judge.py  structured_comparator.py
backend/excel/: xlsx_parser.py
backend/infra/: claude_sdk_client.py  client_factory.py  langfuse_tracing.py  llm_client.py  openai_client.py  prompt_loader.py  prompt_manager.py  sandbox.py
backend/memory/: embedder.py  search.py  store.py
backend/pipeline/: agent_orchestrator.py  debug_loop.py  eval_debug_loop.py  llm_eval_debug_loop.py  orchestrator_types.py  phase_handlers.py  reflection_engine.py  skills_engine.py  task_planner.py
backend/prompts/: eval_agent.txt  phase_a_exploration.txt  phase_b_reflect.txt  phase_c_generate.txt  phase_c_subtask.txt  phase_d_debug.txt  phase_f_eval_debug.txt  phase_g_llm_eval_debug.txt  phase_p_plan.txt  phase_p_replan.txt  v2_fix.txt  v2_generate.txt  v2_generate_step.txt  v2_strategize.txt
backend/routers/: eval.py  execute.py  generate.py  history.py  models.py  skills.py  upload.py
backend/schemas/: execute.py  generate.py  history.py  skills.py  upload.py
backend/services/: agent_orchestrator.py  debug_loop.py  eval_agent.py  eval_debug_loop.py  eval_run_manager.py  excel_comparator.py  langfuse_tracing.py  llm_eval_debug_loop.py  llm_judge.py  openai_client.py  phase_handlers.py  prompt_builder.py  prompt_loader.py  prompt_manager.py  reflection_engine.py  sandbox.py  skills_engine.py  task_planner.py  xlsx_parser.py
(+193 files in other folders)
