[project]
name = "excel-tool-builder-backend"
version = "0.1.0"
description = "Excel x NL Tool Builder - Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.60",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.21",
    "python-dotenv>=1.0",
    "langfuse>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "black>=24.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
