[project]
name = "excel-tool-builder-backend"
version = "0.1.0"
description = "Excel x NL Tool Builder - Backend API"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.127",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.13",

    # LLM / AI
    "litellm>=1.67",
    "claude-agent-sdk>=0.1.25",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "tiktoken>=0.9",

    # Observability
    "langfuse>=4.0",

    # Excel / Data
    "openpyxl>=3.1",
    "pandas>=2.2",

    # DB
    "sqlalchemy>=2.0",
    "aiosqlite>=0.21",

    # Utilities
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0",
    "aiofiles>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "black>=25.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
